# IPCameraForRaspi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UploadBin.cmd  run_debug.sh
src/: main.cpp
